--- a/general_method.rmd
+++ b/general_method.rmd
@@ -21,7 +21,7 @@ exp_table <- read.csv('Exp_info_all.csv') %>%
 apa_table(
   exp_table
   , caption = "Information about all experiments."
-  , note = "Stim of Morality = How moral character was manipulated; Presenting order = how shapes & labels were presented. The data from experiments 7a & 7b, which were reported in Hu et al (2020), are not analyzed here."
+  , note = "Stim.for.Morality = How moral character was manipulated; Presenting.order = How shapes & labels were presented. Number in () for N is number of participants are included in the analysis. In the current analysis, we only remain participants' data when they participate the experiment for the first time."
   , escape = TRUE
 )
 ```
@@ -32,7 +32,7 @@ We used the `tidyverse` of r (see script `Load_save_data.r`) to preprocess the d
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or *t*-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation [@Rouder_2005_BHM_SDT]. Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied [@rousselet_reaction_2020]. Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments. 
 
-We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
+We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Method and data of individual experiments can be found in the supplementary materials and open datasets. Because a few participants had participated multiple experiments, we only included their data of first paticipation to avoid practice effect. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
 
 For questionnaire data, we only reported the subjective distance between different persons or moral characters in the supplementary results and did not analyze other questionnaire data, which are described in [@Liu_2020_JOPD].
 
